--- a/src/main/resources/assets/moraymobs/lang/en_us.json
+++ b/src/main/resources/assets/moraymobs/lang/en_us.json
@@ -2,10 +2,19 @@
 "item.moraymobs.spawn_basaltlisk": "Spawn Basaltlisk",
   "item.moraymobs.spawn_body_snatcher": "Spawn Body Snatcher",
   "item.moraymobs.spawn_opposum": "Spawn Opossum",
+  "item.moraymobs.spawn_volcanoback": "Spawn Volcanoback",
+  "item.moraymobs.spawn_moray": "Spawn Bony Moray",
+
   "block.moraymobs.basaltlamp": "Basalt Lamp",
   "entity.moraymobs.bodysnatcher": "Body Snatcher",
   "entity.moraymobs.opossum": "Opossum",
   "entity.moraymobs.basaltlisk": "Basaltlisk",
+  "entity.moraymobs.volcanoback": "Volcanoback",
+  "entity.moraymobs.boneymoray": "Bony Moray",
+
+
+
+
   "tooltip.moraymobs.brain": "Shift-Right Click to gain more exp",
   "tooltip.moraymobs.basaltlamp": "Rare, Powerful, or Notable creatures are lit up by this lamp by right clicking the block. Obtained from Basaltlisks after eating a small magma cube."
 
