--- a/src/main/resources/assets/moraymobs/lang/en_us.json
+++ b/src/main/resources/assets/moraymobs/lang/en_us.json
@@ -1,7 +1,11 @@
 {"item.moraymobs.brain": "Brain",
   "item.moraymobs.jawloose": "Eel Jaw",
   "item.moraymobs.scale": "Beetle Scale",
-"item.moraymobs.spawn_basaltlisk": "Spawn Basaltlisk",
+  "item.moraymobs.beetlemask": "Beetle Mask",
+  "item.moraymobs.beetlechestplate": "Beetle Chestplate",
+  "item.moraymobs.beetleleggings": "Beetle Leggings",
+  "item.moraymobs.beetleboots": "Beetle Boots",
+  "item.moraymobs.spawn_basaltlisk": "Spawn Basaltlisk",
   "item.moraymobs.spawn_body_snatcher": "Spawn Body Snatcher",
   "item.moraymobs.spawn_opposum": "Spawn Opossum",
   "item.moraymobs.spawn_volcanoback": "Spawn Volcanoback",
