--- a/src/main/resources/assets/moraymobs/lang/en_us.json
+++ b/src/main/resources/assets/moraymobs/lang/en_us.json
@@ -6,6 +6,7 @@
   "item.moraymobs.beetleleggings": "Beetle Leggings",
   "item.moraymobs.beetleboots": "Beetle Boots",
   "item.moraymobs.eelwhip": "Eel Whip",
+  "item.moraymobs.paddlefishfood": "Paddlefish",
   "item.moraymobs.basalt_crystal":"Basalt Crystal",
   "item.moraymobs.spawn_basaltlisk": "Spawn Basaltlisk",
   "item.moraymobs.spawn_body_snatcher": "Spawn Body Snatcher",
